<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ItemEditActivity">

    <TextView
        android:id="@+id/txtItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtViewCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/txtViewQttInEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/txtChangeQtt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtItemName" />

    <ImageView
        android:id="@+id/imgViewMinus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewQttInEdit"
        app:srcCompat="@drawable/minus" />

    <TextView
        android:id="@+id/txtViewEditQtt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/ex"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imgViewMinus"
        app:layout_constraintTop_toBottomOf="@+id/txtViewQttInEdit" />

    <ImageView
        android:id="@+id/imgViewPlus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/txtViewEditQtt"
        app:layout_constraintTop_toBottomOf="@+id/txtViewQttInEdit"
        app:srcCompat="@drawable/plus" />

    <TextView
        android:id="@+id/dollarSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dollarSign"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtViewTtlPriceInEdit"
        app:layout_constraintTop_toBottomOf="@+id/txtViewQttInEdit" />

    <TextView
        android:id="@+id/txtViewTtlPriceInEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toEndOf="@+id/imgViewPlus"
        app:layout_constraintTop_toBottomOf="@+id/txtViewQttInEdit" />

    <TextView
        android:id="@+id/txtViewCancel"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:backgroundTint="#DCD7D7"
        android:fontFamily="monospace"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Cancel"
        android:textColor="@color/com_facebook_button_send_background_color_pressed"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtViewSave"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:background="#2196F3"
        android:backgroundTint="@color/com_facebook_button_send_background_color_pressed"
        android:fontFamily="monospace"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Save"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtViewTtlPrice" />

    <TextView
        android:id="@+id/txtViewRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/txtViewDelete"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewMinus" />

    <ImageView
        android:id="@+id/RemoveInEdit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewRemove"
        app:srcCompat="@drawable/trash" />
</androidx.constraintlayout.widget.ConstraintLayout>