<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CartActivity2">

    <TextView
        android:id="@+id/txtItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Item"
        android:textColor="@color/com_facebook_button_send_background_color_pressed"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listViewItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtQtt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quantity"
        android:textColor="@color/com_facebook_button_send_background_color_pressed"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listViewItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toEndOf="@+id/txtItem"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/Price"
        android:textColor="@color/com_facebook_button_send_background_color_pressed"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listViewItems"
        app:layout_constraintStart_toEndOf="@+id/txtQtt"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listViewItems"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002" />

    <TextView
        android:id="@+id/txtViewTtlPrice"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:backgroundTint="#DCD7D7"
        android:fontFamily="monospace"
        android:gravity="center_horizontal|center_vertical"
        android:text="TextView"
        android:textColor="@color/com_facebook_button_send_background_color_pressed"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtViewCheckOut"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:background="#2196F3"
        android:backgroundTint="@color/com_facebook_button_send_background_color_pressed"
        android:fontFamily="monospace"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/txtViewChkOut"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtViewTtlPrice" />

    <ImageView
        android:id="@+id/imgHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewItems"
        app:srcCompat="@drawable/icons_home" />

</androidx.constraintlayout.widget.ConstraintLayout>